# app-store-api

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.test.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  ci_cd.yml
app/: dependencies.py  main.py  utils.py
app/core/: auth.py  config.py  dependencies.py  exceptions.py  logging.py  middlewares.py  rate_limiter.py  security.py  tasks.py  utils.py
app/db/: postgres.py  redis.py
app/models/: __init__.py  app.py  app_purchase.py  apps.py  company.py  discussion.py  finance.py  purchase.py  review.py  reviews.py  token.py  user.py
app/repo/: app_repo.py  cart_repo.py  discussion_repo.py  finance_repo.py  purchase_repo.py  review_repo.py  user_repo.py
app/routing/: app_router.py  company_router.py  review_router.py  user_router.py
app/service/: app_service.py  cart_service.py  discussion_service.py  finance_service.py  purchase_service.py  review_service.py  user_service.py
app/testing/: conftest.py
app/uow/: unit_of_work.py
app/utils/: app.py  search.py  time.py
github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 026e0df29ae3_rename_tables_and_add_messages_.py  027ff7435294_purchase_cart_revision.py  1a55c8d36887_.py  4535f94e6a1a_.py  51ad51904537_.py  5c8d9d5efdeb_add_version_app.py  6d330e6a6553_.py  6e49a378e5bd_add_user_review_app_tables.py  a85cf81c92e3_add_purchase_cart_cart_item_tables.py  b5a16dbf7c76_fix_create_at_datetimes_and_primary_.py  c5b26b54a85d_add_transfer_table.py  d243301c6650_.py  d67fc8f6867a_add_operation_type_column.py  f77d13b62008_add_times_purchased_column_to_apps_table.py
nginx/: nginx.conf
testing/: conftest.py
tests/: conftest.py
(+20 files in other folders)
