[project]
name = "app-store-api"
version = "1.0"
description = "REST API of the web store where you can purchase and upload apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.3",
    "fastapi-mail>=1.6.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0.50",
    "alembic-postgresql-enum>=1.10.0",
    "pydantic-settings>=2.14.1",
    "pytest-mock>=3.15.1",
    "fakeredis>=2.36.2",
    "aiosqlite>=0.22.1",
    "ruff>=0.15.20",
]

[tool.uv.workspace]
members = [
    "venv",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length  = 79
target-version = "py3143"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.20",
]
